<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_all_app_custom_category_finish">Done</string>
    <string name="accessibility_all_app_custom_category_item_remove">Remove \"%1$s\" from categories</string>
    <string name="accessibility_clear_search_bar_text">Clear search bar</string>
    <string name="accessibility_enter_all_app_mode">Open App drawer</string>
    <string name="accessibility_enter_all_app_settings">Open App drawer settings</string>
    <string name="accessibility_menu_item_smallwindow_disable">"This app doesn't support floating windows"</string>
    <string name="accessibility_menu_item_smallwindow_enable">This app supports floating windows</string>
    <string name="accessibility_menu_item_split_disable">"App doesn't support Split screen."</string>
    <string name="accessibility_menu_item_split_enable">App supports Split screen</string>
    <string name="accessibility_recent_task_clear_info">Clear all Recents</string>
    <string name="accessibility_recent_task_enter">Opened Recents</string>
    <string name="accessibility_recent_task_exit">Closed Recents</string>
    <string name="accessibility_recent_task_locked_state">Locked</string>
    <string name="accessibility_recent_task_memory_info">Total RAM: %2$s | Available RAM: %1$s. Double tap to clear.</string>
    <string name="accessibility_recent_task_show_menu">More options</string>
    <string name="accessibility_recent_task_unlocked_state">Unlocked</string>
    <string name="accessibility_recents_item_dismissed">%1$s cleared</string>
    <string name="accessibility_recents_item_open_app_info">Open %s application info.</string>
    <string name="accessibility_sliding_button_state_description_off">Turned off</string>
    <string name="accessibility_sliding_button_state_description_on">Turned on</string>
    <string name="accessibility_tab_state_description_unselect">Not selected</string>
    <string name="accessibility_tab_statedesc_unselect">Not selected</string>
    <string name="action_add_to_workspace">Add to workspace</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="activity_not_found">"App isn't installed on your device"</string>
    <string name="activity_not_unlocked">Wait until your device is fully rebooted before opening apps</string>
    <string name="add_custom_category">Custom</string>
    <string name="add_to_workspace">Add to Home screen</string>
    <string name="added_all_category">Added all apps successfully</string>
    <string name="afternoon">Afternoon</string>
    <string name="alexa_notification_add">Add</string>
    <string name="alexa_notification_cancel">Not now</string>
    <string name="alexa_notification_content">Add Alexa shortcut to Control center?</string>
    <string name="all_app_category_all">All</string>
    <string name="all_app_category_communication">Communication</string>
    <string name="all_app_category_default">Category</string>
    <string name="all_app_category_entertainment">Entertainment</string>
    <string name="all_app_category_finance_business">Finance &amp; Business</string>
    <string name="all_app_category_games">Games</string>
    <string name="all_app_category_knowledge_education">Knowledge &amp; Education</string>
    <string name="all_app_category_lifestyle">Lifestyle</string>
    <string name="all_app_category_news_reading">News &amp; Reading</string>
    <string name="all_app_category_personal">Personal</string>
    <string name="all_app_category_personalization">Personalization</string>
    <string name="all_app_category_photography">Photography</string>
    <string name="all_app_category_shopping">Shopping</string>
    <string name="all_app_category_tools">Tools</string>
    <string name="all_app_category_work">Work</string>
    <string name="all_apps">All apps</string>
    <string name="all_apps_install_contentcenter_msg">Looks like Content Center was uninstalled. Install again?</string>
    <string name="all_apps_install_contentcenter_title">Install Content Center</string>
    <string name="all_apps_search_app">Search for apps</string>
    <string name="all_apps_search_market_message">Search online</string>
    <string name="all_apps_setting_classic_title">Classic</string>
    <string name="all_apps_setting_drawer_title">With App drawer</string>
    <string name="all_apps_setting_jeejen_title">Lite mode</string>
    <string name="all_apps_setting_letter_scrollbar">A-Z</string>
    <string name="all_apps_setting_original_scrollbar">Original layout</string>
    <string name="all_apps_setting_scroll_bar">Scroll bar</string>
    <string name="all_apps_setting_title">Home screen</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation_rate_title">Animation speed</string>
    <string name="announce_folder_close">Close “%1$s”</string>
    <string name="announce_for_app_move_in_folder">Moved to position %1$d in the folder</string>
    <string name="announce_for_checked">%1$s, checked</string>
    <string name="announce_for_checked_after">checked, %1$s</string>
    <string name="announce_for_choose_default_screen">Set screen %1$d as the default Home screen</string>
    <string name="announce_for_close_default_preview">Closed default Home screen settings</string>
    <string name="announce_for_create_folder_with_app">Created a folder with %1$s</string>
    <string name="announce_for_delete_gadget_and_widget">Widget</string>
    <string name="announce_for_delete_item">%1$s was deleted</string>
    <string name="announce_for_drag_enter_delete_zone">Dragged items to the uninstallation zone</string>
    <string name="announce_for_drag_enter_folder_grid">You can drop items into the folder</string>
    <string name="announce_for_drag_enter_workspace_thumbnail">Dragged items to screen preview number %1$d</string>
    <string name="announce_for_drop">Dropped %1$s</string>
    <string name="announce_for_drop_folder_grid_view">Number %1$d in the folder</string>
    <string name="announce_for_drop_folder_icon">In the folder %1$s</string>
    <string name="announce_for_drop_hotseat">In the dock area</string>
    <string name="announce_for_drop_line">Dropped line number %1$d</string>
    <string name="announce_for_drop_shortcut_icon">Created a folder with %1$s and %2$s</string>
    <string name="announce_for_drop_trash">In the uninstallation zone</string>
    <string name="announce_for_drop_workspace">Screen number %1$d, line number %2$d, column number %3$d</string>
    <string name="announce_for_edit_mode">Entered editing mode</string>
    <string name="announce_for_edit_mode_disable">Exited editing mode</string>
    <string name="announce_for_indicator">Page %1$d of %2$d pages</string>
    <string name="announce_for_launcher_menu_close">Collapsed</string>
    <string name="announce_for_layout_preview_mode">Open preview</string>
    <string name="announce_for_layout_preview_mode_disable">Close preview</string>
    <string name="announce_for_move">Move to row %1$d column %2$d</string>
    <string name="announce_for_move_hotseat">Move to dock position %1$d</string>
    <string name="announce_for_open_default_preview">Opened default Home screen settings</string>
    <string name="announce_for_open_folder">Open \"%1$s\"</string>
    <string name="announce_for_search_bar">Search bar</string>
    <string name="announce_for_show_uninstall_dialog">Uninstallation dialog appeared. Cancel or confirm.</string>
    <string name="announce_for_super_xiaoai">Xiaomi Hyper XiaoAi</string>
    <string name="announce_for_unchecked">%1$s, unchecked</string>
    <string name="announce_for_unchecked_after">unchecked, %1$s</string>
    <string name="announce_for_widget_span">Width %1$d, height %2$d</string>
    <string name="announce_for_xiaoai">Mi AI</string>
    <string name="announce_to_drop_folder_grid_view">Dropped in position %1$d in the folder</string>
    <string name="announce_to_drop_folder_icon">Dropped in \"%1$s\"</string>
    <string name="announce_to_drop_hotseat">Added to the Dock</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_skip">Skip</string>
    <string name="confirm_fingerprint_msg">Verify your fingerprint</string>
    <string name="default_folder_title_hot_path">com.vroco.launcher:string/default_folder_title_hot</string>
    <string name="default_folder_title_recommend_path">com.vroco.launcher:string/default_folder_title_recommend</string>
    <string name="fingerprint_identify_msg">Turn on fingerprint unlock</string>
    <string name="fs_gesture_back_ready_title">Go back</string>
    <string name="gadget_clock_label">Clock</string>
    <string name="gadget_weather_title">Weather</string>
    <string name="guide_permission_msg_storage">Allow POCO Launcher to access storage to be able to customize your Home screen.</string>
    <string name="guide_permission_title">Permissions required</string>
    <string name="guide_permission_title_storage">Storage permissions</string>
    <string name="how_to_back_home">Go to Home screen</string>
    <string name="how_to_switch_recents">Open Recents</string>
    <string name="how_to_use_fsg">You can perform these actions using gestures:</string>
    <string name="menu_auto_fill_of_uninstall">Fill cells of uninstalled apps</string>
    <string name="menu_default_screen_preview">Set default screen</string>
    <string name="menu_lock">Lock Home screen layout</string>
    <string name="menu_more">More</string>
    <string name="menu_no_word">"Don't show text"</string>
    <string name="menu_trans_effect">Transition effects</string>
    <string name="miui_setting_config_title">Home screen settings</string>
    <string name="new_default_folder_title_tools_path">com.vroco.launcher:string/new_default_folder_title_tools</string>
    <string name="recommend_apps_notice">"Today's recommendations"</string>
    <string name="recommend_refresh">Refresh</string>
    <string name="recommend_xout">"Don't show"</string>
    <string name="setting_close">Off</string>
</resources>