<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/text_permission_allow" android:layout_centerVertical="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/explain_request_permission_img" android:layout_width="191.0dip" android:layout_height="192.0dip" android:layout_marginTop="@dimen/dp170" />
            <TextView android:textSize="@dimen/text_size_sp20" android:textColor="@color/alpha90black" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp16" android:text="@string/guide_permission_title" android:fontFamily="sans-serif-medium" />
            <TextView android:textSize="@dimen/permission_guide_title_text_size" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/permissions_margin_top" android:text="@string/guide_permission_title_storage" android:fontFamily="sans-serif-medium" android:layout_marginStart="@dimen/dp40" android:layout_marginEnd="@dimen/dp40" />
            <TextView android:textSize="@dimen/permission_guide_msg_text_size" android:textColor="@color/opacity50black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp7" android:layout_marginRight="@dimen/dp40" android:text="@string/guide_permission_msg_storage" />
        </LinearLayout>
    </ScrollView>
    <TextView android:textSize="@dimen/text_size_sp14" android:textColor="@color/alpha40black" android:id="@id/text_skip" android:layout_width="@dimen/dp48" android:layout_height="@dimen/dp48" android:layout_marginTop="@dimen/dp42" android:text="@string/btn_skip" android:layout_marginEnd="@dimen/dp20" android:layout_alignParentEnd="true" />
    <TextView android:textSize="@dimen/text_size_sp13" android:textColor="@color/white" android:gravity="center" android:id="@id/text_permission_allow" android:background="@drawable/icon_pack_apply_button_selector" android:layout_width="fill_parent" android:layout_height="@dimen/dp42" android:layout_marginLeft="@dimen/dp27" android:layout_marginTop="@dimen/dp14" android:layout_marginRight="@dimen/dp27" android:layout_marginBottom="@dimen/dp20" android:text="@string/btn_allow" android:layout_alignParentBottom="true" />
</RelativeLayout>