<?xml version="1.0" encoding="utf-8"?>
<com.miui.home.launcher.LauncherMenu android:orientation="vertical" android:id="@id/menu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/launcher_menu_divider"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/title" android:layout_width="fill_parent" android:layout_height="@dimen/first_line_height" android:contentDescription="@string/miui_setting_config_title">
        <androidx.appcompat.widget.AppCompatImageView android:gravity="center" android:id="@id/title_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:contentDescription="@string/setting_close" android:layout_marginStart="@dimen/launcher_menu_title_img_margin_start" android:layout_marginEnd="@dimen/launcher_menu_title_img_margin_end" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/edit_setting_close" />
        <com.miui.home.launcher.LauncherMenuItemTitle android:textSize="@dimen/miuix_font_size_title3" android:textStyle="normal" android:textColor="@color/alpha80black" android:ellipsize="end" android:layout_gravity="center" android:id="@id/title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="@dimen/launcher_menu_title_text_max_width" android:text="@string/miui_setting_config_title" android:maxLines="1" android:fontFamily="sans-serif-medium" android:layout_marginStart="@dimen/launcher_menu_title_text_margin_start" android:layout_marginEnd="@dimen/launcher_menu_title_text_margin_end" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/center_menu_item_ll" android:background="@drawable/edit_mode_setting_center_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/launcher_menu_title_bottom" android:layout_marginStart="@dimen/launcher_menu_child_horizontal" android:layout_marginEnd="@dimen/launcher_menu_child_horizontal">
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_trans_effect" android:background="@drawable/launcher_menu_top_item_bg" android:layout_width="fill_parent" android:contentDescription="@string/menu_trans_effect" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:text="@string/menu_trans_effect" style="@style/menu_item_title" />
            <androidx.appcompat.widget.AppCompatImageView android:gravity="center" android:layout_gravity="end|center" android:id="@id/arrow_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/miuix_preference_item_padding_inner" app:srcCompat="@drawable/miuix_appcompat_intent_arrow_right" />
        </com.miui.home.launcher.LauncherMenuItem>
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_default_screen_preview" android:background="@drawable/launcher_menu_middle_item_bg" android:layout_width="fill_parent" android:contentDescription="@string/menu_default_screen_preview" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:text="@string/menu_default_screen_preview" style="@style/menu_item_title" />
            <androidx.appcompat.widget.AppCompatImageView android:gravity="center" android:layout_gravity="end|center" android:id="@id/arrow_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/miuix_preference_item_padding_inner" app:srcCompat="@drawable/miuix_appcompat_intent_arrow_right" />
        </com.miui.home.launcher.LauncherMenuItem>
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_no_word" android:background="@drawable/launcher_menu_middle_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:text="@string/menu_no_word" style="@style/menu_item_title" />
            <miuix.appcompat.widget.Spinner android:layout_gravity="end|center" android:id="@id/no_word_Spinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </com.miui.home.launcher.LauncherMenuItem>
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_auto_fill" android:background="@drawable/launcher_menu_middle_item_bg" android:layout_width="fill_parent" android:contentDescription="@string/menu_auto_fill_of_uninstall" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:text="@string/menu_auto_fill_of_uninstall" style="@style/menu_item_title" />
            <miuix.slidingwidget.widget.SlidingButton android:layout_gravity="center_vertical" android:id="@id/auto_fill_sliding_button" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </com.miui.home.launcher.LauncherMenuItem>
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_lock" android:background="@drawable/launcher_menu_bottom_item_bg" android:layout_width="fill_parent" android:contentDescription="@string/menu_lock" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:text="@string/menu_lock" style="@style/menu_item_title" />
            <miuix.slidingwidget.widget.SlidingButton android:layout_gravity="center_vertical" android:id="@id/lock_sliding_button" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </com.miui.home.launcher.LauncherMenuItem>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/more_item_ll" android:background="@drawable/edit_mode_setting_center_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/desktop_editing_launcher_menu_more_top" android:layout_marginBottom="@dimen/desktop_editing_launcher_menu_bottom_margin" android:layout_marginStart="@dimen/launcher_menu_child_horizontal" android:layout_marginEnd="@dimen/launcher_menu_child_horizontal">
        <com.miui.home.launcher.LauncherMenuItem android:id="@id/menu_more_effect" android:background="@drawable/launcher_menu_more_item_bg" android:layout_width="fill_parent" android:contentDescription="@string/menu_more" style="@style/menu_item">
            <com.miui.home.launcher.LauncherMenuItemTitle android:textColor="@color/navigation_bar_type_title_selected_color" android:text="@string/menu_more" style="@style/menu_item_title" />
        </com.miui.home.launcher.LauncherMenuItem>
    </LinearLayout>
</com.miui.home.launcher.LauncherMenu>